--- a/.github/AL-Go-Settings.json
+++ b/.github/AL-Go-Settings.json
@@ -1,5 +1,5 @@
 {
   "type": "AppSource App",
-  "templateUrl": "https://github.com/microsoft/AL-Go-AppSource@v4.0",
+  "templateUrl": "https://github.com/businesscentralapps/tmpN6sxaC-AppSource@main",
   "MicrosoftTelemetryConnectionString": ""
 }
